<resources>
    <string name="app_name">FullGame</string>
    <string name="third_fragment">Tuliskan nama mu dibawah</string>
    <string name="second_fragment">Bermain Suit melawan komputer</string>
    <string name="first_fragment">Bermain Suit melawan sesama pemain</string>
    <string name="player1">Player1</string>

    <string name="playerDua">Player2</string>
    <string name="COM">COM</string>
    <string name="kertas">kertas</string>
    <string name="batu">batu</string>
    <string name="guntingCom" />
    <string name="vs">VS</string>
    <string name="gunting">gunting</string>
    <string name="winplayer1">player 1 win</string>
    <string name="Draw">Draw</string>

    <string name="comMenang">comMenang</string>
    <string name="player2">Player 2 win</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>