<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.com.ComActivity">

    <ImageView
        android:id="@+id/ivClose"
        style="@style/image"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/judul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivClose" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul">

        <TextView
            android:id="@+id/player1Com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/player1"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/batup1"
            style="@style/image"
            android:layout_height="2dp"
            android:contentDescription="@string/batu"
            android:src="@drawable/batu" />

        <ImageView
            android:id="@+id/guntingp1"
            style="@style/image"
            android:layout_height="14dp"
            android:contentDescription="@string/gunting"
            android:src="@drawable/gunting" />

        <ImageView
            android:id="@+id/kertasp1"
            style="@style/image"
            android:contentDescription="@string/kertas"
            android:src="@drawable/kertas" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/com"
        android:layout_width="86dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul">

        <TextView
            android:id="@+id/tv_com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/COM"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/batuCom"
            style="@style/image"
            android:contentDescription="@string/batu"
            android:src="@drawable/batu" />

        <ImageView
            android:id="@+id/guntingCom"
            style="@style/image"
            android:contentDescription="@string/gunting"
            android:src="@drawable/gunting" />

        <ImageView
            android:id="@+id/kertasCom"
            style="@style/image"
            android:contentDescription="@string/kertas"
            android:src="@drawable/kertas" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-8"
        android:text="@string/vs"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/com"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/judul" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/refresh"
        style="@style/ResetButton"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>